--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button class="reserve" id="reserveCell">Reserve Cell</button>
     </div>
 
-    <script src="pullReservations.js"></script>
+    <script src="pullReservations.js2"></script>
     <script src="script.js"></script>
 
 </body>
