--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
 
     <script src="firebase.js"></script>
+    <script src="reservationData.js"></script>
     <script src="script.js"></script>
 
 </body>
