--- a/Hunter/hunter.html
+++ b/Hunter/hunter.html
@@ -14,7 +14,7 @@
         <button class="reserve" id="reserveCell">Reserve Cell</button>
     </div>
 
-
+    <script src="..\Firebase\firebase.js"></script>
     <script src="reservationData.js"></script>
     <script src="script.js"></script>
 
