--- a/Hunter/hunter.html
+++ b/Hunter/hunter.html
@@ -14,6 +14,10 @@
         <button class="reserve" id="reserveCell">Reserve Cell</button>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-auth-compat.js"></script>
+
     <script src="..\Firebase\firebase.js"></script>
     <script src="reservationData.js"></script>
     <script src="script.js"></script>
