--- a/Research/research.html
+++ b/Research/research.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <div class="date-bar">
+        <input type="date" class="date-input" id="userDate" />
+    </div>
+
     <div class="interface">
         <canvas id="mapCanvas" width="700px" height="525px"></canvas>
         <button class="switch" id="nextMap">Switch Maps</button>
@@ -23,6 +27,7 @@
     <script src="https://www.gstatic.com/firebasejs/12.6.0/firebase-auth-compat.js"></script>
 
     <script src="../Firebase/firebase.js"></script>
+    <script src="dates.js"></script>
     <script src="reservationData.js"></script>
     <script src="script.js"></script>
 
