--- a/Hunter/hunter.html
+++ b/Hunter/hunter.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Duke Forest Hunting Reservation</title>
+    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <title>Hunting Reservations - Duke Forest Deer Herd Reduction Program</title>
 </head>
 <body>
 
     <div class="interface">
-        <canvas id="mapCanvas" width="700px" height="525px"></canvas>
+        <canvas id="mapCanvas" width="80%" height="60%"></canvas>
         <button class="switch" id="nextMap">Switch Maps</button>
         <button class="reserve" id="reserveCell">Reserve Cell</button>
     </div>
@@ -19,7 +19,7 @@
     <script src="https://www.gstatic.com/firebasejs/12.6.0/firebase-auth-compat.js"></script>
 
     <script src="../Firebase/firebase.js"></script>
-    <script src="reservationData.js"></script>
+    <script src="../reservationData.js"></script>
     <script src="script.js"></script>
 
 </body>
