--- a/Research/research.html
+++ b/Research/research.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="../styles.css">
     <title>Duke Forest Hunting Reservation</title>
 </head>
 <body>
@@ -28,7 +28,7 @@
 
     <script src="../Firebase/firebase.js"></script>
     <script src="dates.js"></script>
-    <script src="reservationData.js"></script>
+    <script src="../reservationData.js"></script>
     <script src="script.js"></script>
 
 </body>
