--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../checkout.css">
+    <link rel="stylesheet" type="text/css" href="./checkout.css">
     <title>Checkout - Duke Forest Deer Herd Reduction Program</title>
 </head>
 <body>
