--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./checkout.css">
+    <link rel="stylesheet" type="text/css" href="checkout.css">
     <title>Checkout - Duke Forest Deer Herd Reduction Program</title>
 </head>
 <body>
@@ -12,14 +12,14 @@
 
     <h1>Checkout</h1>
 
-    <h3>Enter your two-digit Hunter ID</h3>
-    <input type="number" id="id">
-    <br>
-
     <h3>Enter the number of Deer Caught</h3>
-    <input type="number" id="deerCaught">
+    <button id=decrease>Decrease</button>
+    <span id="deerCaught">0</span>
+    <button id=increase>Increase</button>
     <br>
     
+    <h3>Enter the number of Deer Caught</h3>
+    <input type="number" id="deerCaught">
     <br><br><br>
 
     <button id="submit">Submit</button>
