--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -12,18 +12,24 @@
 
     <h1>Checkout</h1>
 
-    <h3>Enter the number of Deer Caught</h3>
+    <h2>Enter the number of Deer Caught</h2>
     <button id=decrease>Decrease</button>
     <span id="deerCaught">0</span>
     <button id=increase>Increase</button>
-    <br>
+    <br><br><br>
     
-    <h3>Enter the number of Deer Caught</h3>
-    <input type="number" id="deerCaught">
-    <br><br><br>
+    <h2 id="deerTitle">Deer #1 Type:</h2>
+    <h3 id="deerType">----</h3>
+    <button id="buck">Buck</button>
+    <button id="button">Button</button>
+    <button id="doe">Doe</button>
+    <br><br>
+    <button id="prev">Previous Deer</button>
+    <button id="next">Next Deer</button>
 
+    <br><br><br><br><br>
     <button id="submit">Submit</button>
-    <br><br><br>
+    <br><br>
 
     <button id="return">Return to Map</button>
     <br>
@@ -36,6 +42,7 @@
 
     <script src="../Firebase/firebase.js"></script>
     <script src="../reservationData.js"></script>
+    <script src="hunterLoggedIn.js"></script>
     <script src="script.js"></script>
 
 </body>
