--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -13,9 +13,12 @@
     <h1>Checkout</h1>
 
     <h2>Enter the number of Deer Caught</h2>
-    <button id=decrease>Decrease</button>
+    <button id=increase>⬆️</button>
+    <br>
     <span id="deerCaught">0</span>
-    <button id=increase>Increase</button>
+    <br>
+    <button id=decrease>⬇️</button>
+
     <br><br><br>
     
     <h2 id="deerTitle">Deer #1 Type:</h2>
