--- a/HunterLogin/HunterLogin.html
+++ b/HunterLogin/HunterLogin.html
@@ -59,6 +59,7 @@
 
     <script src="../Firebase/firebase.js"></script>
     <script src="../reservationData.js"></script>
+    <script src="hunterLoggedIn"></script>
     <script src="script.js"></script>
 
 </body>
