--- a/Checkout/checkout.html
+++ b/Checkout/checkout.html
@@ -13,11 +13,11 @@
     <h1>Checkout</h1>
 
     <h2>Enter the number of Deer Caught</h2>
-    <button id=increase>⬆️</button>
+    <button id="increase">⬆️</button>
     <br>
     <span id="deerCaught">0</span>
     <br>
-    <button id=decrease>⬇️</button>
+    <button id="decrease">⬇️</button>
 
     <br><br><br>
     
